--- a/八股文/项目.md
+++ b/八股文/项目.md
@@ -1,8 +1,19 @@
 # 技能清单
 
-- 熟练使用 React、Vue 框架及社区生态，了解框架工具的实现原理
-- 了解工程化建设，为团队基础建设做出突出贡献：API 代码生成、测试环境代理切换
-- 了解 Nodejs，能够进行服务端开发，有 CLI 工具开发经验
+- 熟练使用 React、Vue 框架及社区生态，了解框架工具的实现原理。
+- 了解工程化建设，对工作流程规范有一定的认知。为团队基础建设做出突出贡献：API 代码生成、测试环境代理切换。
+- 了解 Nodejs，能够进行服务端开发，有 CLI 工具开发经验，能够配置 Webpack、vite、rollup 打包工具。
+
+# 工作经验
+
+2019.7 至今 安居客-瑞庭网络技术(上海)有限公司 高级前端开发
+
+工作任务主要面向 B 端经纪人业务的产品开发工作
+
+- 安居客二手房业务线前端开发工作(2019.12 ~ 2021.5)
+- 巧房 PC 前端系统架构设计与开发(2021.5 至今)
+- 爱房业务项目开发：PC、H5 管理系统(2021.10 至今)
+- 每月至少一次代码 review 工作
 
 # API 代码生成服务(服务端生成结合 CLI 更新工具)
 
@@ -15,25 +26,24 @@
 
 项目影响：明显提升业务质量、项目可维护性以及开发效率，减少项目腐烂的可能，提升前端开发者的幸福度。
 
-# 前端业务开发，组件库贡献
+# 前端组件库贡献
 
-- 应用组件：房源联动搜索、命令式弹窗(Vue、React)、文档类文件预览、各种布局容器
-- 工具函数：埋点工具、权限工具、useContext 性能优化、对公司内部工具进行适用性封装(例：文件上传 wos-sdk 应用于 Antd、ElementUI、Vant)
+- 应用组件：房源联动搜索、命令式弹窗(Vue、React)、文档类文件预览、各种布局容器。
+- 工具函数：埋点工具、权限工具、useContext 性能优化封装、对公司内部工具进行适用性封装(例：文件上传 wos-sdk 应用于 Antd、ElementUI、Vant)。
 
 # 设计开发巧房测试环境切换功能
 
-项目背景：原系统中，需求并行测试成本高，提测环节需要开发团队将配置描述清楚，还要测试团队学习使用代理工具和 hosts。工作人员多需求并行或开发测试时，切换配置流程繁琐。
-项目简介：在测试环境的架构中新增“代理服务层”，负责代理转发请求，以设备维度进行配置管理；前端页面添加 SDK 显示控制面板，工作人员只需打开面板操作选项。
+项目背景：原系统中，需求并行开发测试时操作成本高。提测环节需要开发团队将配置描述清楚，还要测试团队学习使用工具；多需求并行开发测试时，切换配置的流程繁琐。
+项目简介：在测试环境的架构中新增“代理服务层”，负责代理转发请求，以设备维度进行配置管理；前端页面添加 SDK 显示控制面板，只需打开面板进行选项操作。
 
 - 分享功能结合历史记录。通过 URL 或二维码的形式进行环境分享，方便团队间共享环境，PC、H5 都能快速切换。
-- 前后端项目无需变动，针对 HTML 内容自动嵌入 SDK 脚本。
-- 与集团内部的云平台管理系统打通，控制面板中展示 Pod 机器状态。维护成本低：仅对第一层请求进行代理。
+- 前后端项目无需变动，针对 HTML 内容自动嵌入 SDK 脚本，仅对第一层请求进行代理。
 
 项目影响：降低提测环节的沟通成本，方便测试环境在不同需求之间切换，保证开发、测试团队的友谊长存。
 
 # 巧房微前端体系搭建
 
-项目背景：巧房 SaaS 系统，主要由七大板块组成，业务上天然适合微前端模式，还满足了团队渐进升级重构技术栈的期望。
+项目背景：巧房 SaaS 系统，主要由七大板块组成，业务上天然适合微前端模式，还满足团队渐进升级重构技术栈的期望。
 项目简介：最初采用 Single-Spa，后演进到 qiankun
 
 - 开发微前端注册平台，
@@ -53,3 +63,5 @@
 - 集团内技术分享 1 次，团队内技术分享 5 次，辅导校招生多名
 - 负责规划小组内的团建方案
 - 大学时期有 Python 爬虫经验
+
+
