feat: :fire: explore single spa

--- a/烤面筋/项目.md
+++ b/烤面筋/项目.md
@@ -28,6 +28,34 @@
 
 项目影响：在项目后期的更新迭代上，明显提升开发质量以及效率，降低项目腐烂的可能。
 
+我个人认为，所有我觉得方便的地方，一定是有人在背后绞尽脑汁做了大量的优化改善，工作只会转移不会消失。就好比现在特别火的 chatgpt，GitHub 的 Copilot，我们觉得特别好玩好用，背后的开发者也是投入了海量的人力物力。还有前两年特别火的低代码、无代码，工作量并没有消失，他只是转移到了另外一帮人的身上或者是变成了另一种方式。但总的来说咱们开发者一直都在探索更高的效率，为了跑到更快更稳，咱们这帮程序员也一直乐此不疲的造轮子，所以说能够消灭程序员的只有程序员，不好意思不好意思，扯的有点远了。
+
+问题：
+
+1. 相对于其他工具有什么好处？
+   社区中的项目有很多，比如 apifox、swagger、postman、还有一些 vscode 插件都可以生成前端代码，这些工具的一个共同特点是，需要每个人自己去操作工具生成代码文件，再把文件放到仓库中。最开始我们也是这样做的，但是后来发现这样做有一个非常大的问题，当一个项目有很多个需求同时进行的时候，每个人都在操作工具生成代码文件，上线合并的时候会产生很多冲突，并且这些冲突几乎是无解的，只能暂时忽略然后重新生成文件。所以我们的目标就是，希望能够把这个过程自动化，让代码生成的过程不需要人工干预，尽量减少冲突。
+2. 工作流程是什么样的？
+   项目的核心思路是由 node 端去生成并维护代码文件，开发者在项目中安装运行 cli 工具来实现接口文件的更新。
+   目前已经有 30 多个前端项目和 80 多个后端服务接入，还是有一定的使用规模的。首先我要求后端服务能够使用 swagger 或者是 openapi 这些标准的文档格式，因为我是基于开源工具来做的，没必要自己去重新实现一套文档解析的工具，接下来需要与集团现有的云平台进行集成，我得知道是哪个服务集群的那台 pod 机器触发了部署动作，等他部署完成后需要通知我的服务去生成代码文件，接下来会通知客户端进行更新动作，这个通知动作是维护了一个 websocket 通道，当有人正在开发页面的时候会通过 cli 工具加入房间，通过广播来确定自己的依赖文件是否需要进行更新。这样一整套的工作流程就结束了。
+3. 遇到了什么问题？
+   这个项目是我周末搞出来的，目前只有我一个人在做，严格来说还是一个半成品。
+   先说一个我遇到的最傻的一个技术问题吧，在 node 端生成代码需要运行 shell 命令嘛，最开始我是用 exec 去执行操作的，但是生成过程中时不时的报错，换成 spawn 就没事。因为 exec 的缓冲区有限制，生成过程中输出的日志把缓冲区撑爆了。
+
+   问题主要分前期和后期两个阶段，我先说前期的问题，因为已经解决了。
+   首先是更新的方式，基本思路是通过 node 服务生成文件，cli 更新文件，但是具体怎么更新也是一个大问题，比如我可以将每个后端服务都单独生成一个依赖包，直接 npm install yarn add，这样代码冲突限制在了 packagejson 里，但是依赖包的方式又会引入版本管理的概念；另外一种是直接下载文件到项目目录中，这种方式为了避免代码冲突问题，只能是搞一个临时文件夹，类似于 umi 或者是 webpack 的缓存文件夹，这种方式的升级版是 git submodule。总的来说我还没有想到一个超级完美的方案，目前是只实现了 npm 包的方式进行管理，因为简单嘛。
+
+   另外一个问题，虽然开源工具提供了文档校验的功能，但生成的代码还是有可能跑不起来，所以需要设计一个比较通用的测试用例来保证导出的方法函数能够正常跑。
+
+   socket 通信做的也比较粗糙，yarn dev 的时候会先查询前端仓库都依赖了哪些包，加入到房间立即进行版本对比，如果本地落后于远程的话就会触发更新动作，这个过程很像 http 握手。服务端也会记录开发者的依赖包，当服务端重新生成代码的时候会去比对一下，如果版本号一致就不会通知这个开发者。也就是加入房间时对比更新，生成代码后选择通知。
+
+   后期的问题也很多，都是还没有解决的问题。
+   还有一个重复生成的问题，同一个后端服务可能同时部署了好几个版本，意味着需要对所有的版本都生成一遍，我目前是加了一个队列进行控制，因为是单机单实例服务所以不会有并发问题，但是如果是多实例的场景就完蛋了，如果之后需要加机器的话，还需要再设计一下。队列的设计：以后端服务的维度来划分队列，每个服务都有一条自己的队列，云平台机器部署成功后会请求生成代码文件，根据这个请求会拿到 pod 机器的 ip、仓库和版本号，我会把它当做一个事件加入队列，加入之前会去通过 git-tag 来确定这个仓库的版本号是否已经生成过，或者是不是在队列中，避免重复生成。
+
+   生成的文件体积，开源工具的默认模版体积比自己写接口要大百分之十多一点，比如两千个接口自己写可能需要 100k，生成的代码就需要 110k，120k 的样子，差距还是挺大的，所以需要自己定制模版。
+   现在后端服务的配置文件都是我写在代码里，所以还需要设计一个服务注册的机制。node 端在生成代码后会推送到 git 和 npm 上，因为是大量的文件读取所以生成性能上很差，当然现在用的还比较少。另外其他团队还提出了想要私有化部署，当然这些都是后话了。
+
+4.
+
 # 前端组件库、脚本工具
 
 - 数据管理：immer-external-store，结合 immer 和 useSyncExternalStore 实现的数据共享，使用简单概念少，TS 类型支持友好。仓库(https://github.com/wangzishun/immer-external-store)
@@ -55,6 +83,20 @@
 - 尝试推行 BFF 服务
 
 项目影响：
+
+1. 为什么要升级？
+   这个主要是业务上的压力，疫情期间各个行业都不好做，地产也不例外，为了对抗来自贝壳的压力，集团的组织架构连续变动两次，期望能够联合小型的地产公司来共同对抗贝壳系的压力，希望能发展 58 安居客自己的线下门店，但是又不可能自己从头去做，于是在 2021 年的时候收购了巧房。它是一个为中介地产公司定制的 SaaS 系统。集团希望能够把巧房的线下优势和 58 安居客的线上优势结合起来。这些集团的战略计划，在技术层面上的影响，我用大白话来说，就是把 58 安居客现有的新房二手房租房的一些页面内置到巧房当中，对于巧房的一些管理页面也需要合并到 58 安居客的系统中。我们的团队又特别多，来自北京的、上海的、西安的，加上巧房，涉及到的前端团队总共有 5 个，58 安居客这边其实已经有了基于 qiankun 的微前端，也是我这边参与开发的，但是巧房的微前端是基于 single-spa，最开始的第一个项目是我负责用 iframe 来做的，但是效果不够理想，遇到一些的问题，导致体验比较差， 后来计划升级到 qiankun。
+
+   另外还需要满足线上环境的按公司的灰度控制，这个是针对巧房的一个升级改造点。
+
+2. 升级的问题
+   巧房存量项目有 40 多个前端项目，每一个前端都对应一个 bff 服务，我需要将这些项目都改造成 qiankun，并且将 bff 服务迁移到 58 集团的云平台上，同时还要满足按公司区分流量的的线上灰度控制，这个工作量乍一看是非常庞大的。等我仔细分析的时候会发现，前端项目的构建部署脚本都已经抽离成了 npm 包，我只需要去改造这个包然后在各个仓库进行升级就好。升级的过程也比较简单，写 shell 脚本跑命令去升级这些仓库，本来觉得前端仓库的升级要一周才能完成其实就用了两天，然后就提测了。
+
+   iframe 跨域导致 cookie 访问异常，在高版本的浏览器中跨域的 iframe 不能直接访问 cookie，需要设置一个 samesite：node，但这个属性又有很奇葩的兼容问题。
+   有些页面是放到抽屉里的，需要和外部页面进行交互，还得定制一套 postMessage 的交互协议。
+   还有一些问题是偏后端的流程，账号关联
+
+3.
 
 # 专利贡献
 
